--- a/app/src/main/res/layout/activity_acao_form.xml
+++ b/app/src/main/res/layout/activity_acao_form.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".AcaoCadastroActivity">
+    tools:context=".activity.AcaoForm">
 
     <ScrollView
         android:layout_width="match_parent"
@@ -14,15 +14,6 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical">
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/CadastroAcao"
-                android:textSize="24sp"
-                android:textColor="@color/primary"
-                android:layout_gravity="center_horizontal"
-                android:layout_marginBottom="16dp"/>
 
             <TextView
                 android:layout_width="wrap_content"
@@ -90,19 +81,10 @@
                 android:layout_marginBottom="16dp"/>
 
             <Button
-                android:id="@+id/btnLimparAcao"
+                android:id="@+id/btnSaveAcao"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="@string/LimparCampos"
-                android:background="@color/button"
-                android:textColor="@color/background"
-                android:layout_marginTop="16dp"/>
-
-            <Button
-                android:id="@+id/btnCadastrarAcao"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="@string/Cadastrar"
+                android:text="@string/Salvar"
                 android:background="@color/primary"
                 android:textColor="@color/background"
                 android:layout_marginTop="16dp"/>
