--- a/app/src/main/res/menu/menu_form.xml
+++ b/app/src/main/res/menu/menu_form.xml
@@ -1,19 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:android="http://schemas.android.com/apk/res/android">
+<menu xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <item
-        android:id="@+id/menuItemExcluir"
+        android:id="@+id/menuItemClear"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:icon="@android:drawable/ic_menu_close_clear_cancel"
+        android:title="@string/Excluir"
+        app:showAsAction="ifRoom" />
+
+    <item
+        android:id="@+id/menuItemDelete"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:icon="@android:drawable/ic_menu_delete"
-        android:title="@string/Excluir"
-        app:showAsAction="ifRoom" />
-    <item
-        android:id="@+id/menuItemSalvar"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:icon="@android:drawable/ic_input_add"
         android:title="@string/Salvar"
         app:showAsAction="ifRoom" />
 </menu>
